--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ dkms.conf
 firmware/.settings/language.settings.xml
 /dcafs/dcafs_lib
 firmware/.settings/language.settings.xml
+/firmware/.settings
